# card-game-app

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  docker-entrypoint.sh  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/api/: dependencies.py
backend/api/schemas/: user.py
backend/application/: game_command_factory.py  game_table_manager.py
backend/application/dtos/: user.py
backend/application/interfaces/: irefresh_token_repository.py  iuser_repository.py
backend/application/services/: bot_strategy_registry.py  game_command_parsing_service.py  game_table_manager.py  token_service.py  user_service.py
backend/apps/gametables/: admin.py  apps.py  consumers.py  dependencies.py  exceptions.py  models.py  routing.py  serializers.py  tasks.py  tests.py  urls.py  views.py
backend/apps/users/: admin.py  models.py  permissions.py  serializers.py  views.py
backend/cli_playing/: five_hundred_play_cli.py
backend/config/: asgi.py  exceptions.py  logging.py  settings.py  urls.py  ws_urls.py
backend/core/: game_config.py  user.py
backend/core/exceptions/: app_exception.py  domain_exception.py  infrastructure_exception.py  not_exist_exception.py
backend/core/ws/: app_websocket_consumer.py  jwt_auth_middleware.py
backend/domain/core/: user.py  user_id.py
backend/domain/game/: game_name.py
backend/domain/lobby/: lobby.py
backend/domain/table/: game_table.py  game_table_config.py  game_table_factory.py  player.py  table_id.py
backend/game/: bot_strategy_kind.py  game_name.py
backend/game/common/: bot_strategy.py  card.py  deck.py  game_command.py  game_config.py  game_config_parser.py  (+8 more)
backend/infra/: fake_refresh_token_repository.py  fake_user_repository.py
backend/multiplayer/: game_table.py
(+200 files in other folders)
