[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.7",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "psycopg2-binary>=2.9",
]

[dependency-groups]
dev = [
    "django-stubs>=5.2.7",
    "djangorestframework-stubs>=3.16.4",
    "ruff>=0.14.0",
]
