[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url>=3.0.1",
    "django>=5.2.7",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9",
    "whitenoise>=6.11.0",
]

[dependency-groups]
dev = [
    "django-stubs>=5.2.7",
    "djangorestframework-stubs>=3.16.4",
    "ruff>=0.14.0",
]
